errors.txt
    Checking vibeanvil v0.1.0 (D:\Code\vibeanvil)
warning: unused import: `std::time::Duration`
 --> src\build\iterate.rs:5:5
  |
5 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ProviderResponse`
 --> src\build\iterate.rs:8:46
  |
8 | use crate::provider::{get_provider, Context, ProviderResponse};
  |                                              ^^^^^^^^^^^^^^^^

warning: unused import: `Path`
 --> src\workspace.rs:4:17
  |
4 | use std::path::{Path, PathBuf};
  |                 ^^^^

warning: variable does not need to be mutable
  --> src\build\iterate.rs:43:13
   |
43 |         let mut all_warnings = vec![];
   |             ----^^^^^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0599]: the method `join` exists for struct `Vec<&std::string::String>`, but its trait bounds were not satisfied
  --> src\cli\brain.rs:99:46
   |
99 |                 println!("   Tags: {}", tags.join(", "));
   |                                              ^^^^ method cannot be called on `Vec<&std::string::String>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `[&std::string::String]: std::slice::Join<_>`

warning: value assigned to `last_output` is never read
  --> src\build\iterate.rs:44:31
   |
44 |         let mut last_output = String::new();
   |                               ^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `vibeanvil` (bin "vibeanvil") generated 5 warnings
error: could not compile `vibeanvil` (bin "vibeanvil") due to 1 previous error; 5 warnings emitted
